--- a/package.json
+++ b/package.json
@@ -1,17 +1,48 @@
 {
   "name": "qjd-auto-project",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "gulp": "gulp version",
     "build": "gulp clean && cross-env NODE_ENV=producton rollup -c -m",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\"",
     "release": "release-it",
     "commit": "git-cz"
   },
   "keywords": [],
+  "release-it": {
+    "git": {
+      "commitMessage": "chore(release): v${version}",
+      "push": true,
+      "commit": true,
+      "tag": true,
+      "requireCommits": false,
+      "requireCleanWorkingDir": false
+    },
+    "github": {
+      "release": true,
+      "draft": true
+    },
+    "npm": {
+      "publish": false,
+      "ignoreVersion": false
+    },
+    "plugins": {
+      "@release-it/conventional-changelog": {
+        "preset": "angular",
+        "infile": "CHANGELOG.md",
+        "header": "# Changelog"
+      }
+    },
+    "hooks": {
+      "before:init": "npm run test",
+      "after:bump": "gulp version --bump ${version} && npm run build",
+      "before:release": "echo \"nihao\"",
+      "after:release": "echo Successfully released ${name} v${version} to ${repo.repository}."
+    }
+  },
   "author": "eric",
   "license": "ISC",
   "devDependencies": {
@@ -34,8 +65,5 @@
     "@rollup/plugin-json": "^6.1.0",
     "fs-extra": "^11.2.0",
     "normalize.css": "^8.0.1"
-  },
-  "release-it": {
-    "$schema": "https://unpkg.com/release-it/schema/release-it.json"
   }
 }
