--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qjd-auto-project",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "",
   "main": "index.js",
   "type": "module",
@@ -26,7 +26,7 @@
       "draft": true
     },
     "npm": {
-      "publish": false,
+      "publish": true,
       "ignoreVersion": false
     },
     "plugins": {
